# CavContour

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci_linux.yml  ci_macos.yml  ci_windows.yml
CavcDev/: CMakeLists.txt
CavcDev/tests/benchmarks/: combinebenchmarks.cpp
CavcDev/tests/examples/: polylineoffsetislands.cpp
CavcDev/tests/polylinefactory/: polylinefactory.cpp  polylinefactory.hpp
CavcDev/tests/unittest/: CMakeLists.txt  TEST_cavc_combine_plines.cpp  TEST_cavc_pline.cpp
GuiDebugger/: CMakeLists.txt  CaseCreator.cpp  CaseCreator.h  DocData.cpp  DocData.h  DocManager.cpp  DocManager.h  casedata.cpp  casedata.h  datamanager.h  flatcolorgeometrynode.cpp  flatcolorgeometrynode.h  graphicshelpers.cpp  main.cpp  main.qml  qml.qrc
GuiDebugger/combine/: PlineCombineScene.qml  plinecombinealgorithmview.cpp  plinecombinealgorithmview.h
GuiDebugger/offset/: PlineOffsetScene.qml  plineoffsetalgorithmview.cpp  plineoffsetalgorithmview.h  rawoffsetsegmentsnode.cpp  rawoffsetsegmentsnode.h  spatialindexboundingboxesnode.h
GuiDebugger/offsetisland/: OffsetScene.qml  PlineOffsetIslandsScene.qml  offsetview.cpp  offsetview.h  plineoffsetislandsalgorithmview.cpp  plineoffsetislandsalgorithmview.h
GuiDebugger/settings/: CustomSlider.qml  DebuggerSettings.qml  NgSettings.qml  settings.cpp  settings.h
GuiDebugger/viewer/: AxisGraphicItem.cpp  AxisGraphicItem.h  DbgerViewer.qml  DebuggerViewer.cpp  DebuggerViewer.h  GeoCanvasHelper.cpp  GeoCanvasHelper.h  GeoNode.cpp  GeoNode.h  GeometrySceneView.qml  PlineGraphicItem.cpp  PlineGraphicItem.h  SceneView2d.cpp  SceneView2d.h  SceneView2d.qml  ViewScene2d.qml  Viewer2d.cpp  Viewer2d.h  Viewer2d.qml  caseviewmodel.cpp  caseviewmodel.h  drawstyle.cpp  drawstyle.h  flatcolorgeometrynode.cpp  flatcolorgeometrynode.h  geometrycanvasitem.cpp  graphicshelpers.h  plinesegmentnode.cpp  plinesegmentnode.h  pointsetnode.cpp  segmentnode.cpp  segmentnode.h  simplecirclenode.cpp  simplecirclenode.h  viewmodel.cpp  viewmodel.h  vmparameter.cpp  vmparameter.h
NgCavlierContour/: CMakeLists.txt
NgCavlierContour/examples/: CMakeLists.txt  basicpolylinefunctions.cpp  windingnumber.cpp
NgCavlierContour/tests/: CMakeLists.txt
NgCavlierContour/tests/benchmarks/: CMakeLists.txt  benchmarkprofiles.h  pathlengthbenchmarks.cpp
NgCavlierContour/tests/benchmarks/clipper/: clipper.cpp  clipper.hpp  clipper_export.hpp
NgCavlierContour/tests/examples/: CMakeLists.txt  polylinecombine.cpp  polylineoffset.cpp
NgCavlierContour/tests/polylinefactory/: CMakeLists.txt
NgCavlierContour/tests/tests/: CMakeLists.txt  TEST_cavc_combine_plines.cpp  TEST_cavc_parallel_offset.cpp  TEST_cavc_pline.cpp  TEST_cavc_pline_function.cpp  cavc_combine_plines_tests.cpp  cavc_pline_function_tests.cpp
NgCavlierContour/tests/tests/include/: c_api_test_helpers.hpp
NgCavlierContour/tests/unittest/: TEST_cavc_parallel_offset.cpp  TEST_cavc_pline_function.cpp
NgCavlierContour/tests/unittest/include/: c_api_test_helpers.hpp  testhelpers.hpp
cavc/src/: cavaliercontours.h
cavc/tests/benchmarks/: areabenchmarks.cpp  spatialindexbenchmarks.cpp  windingnumberbenchmarks.cpp
cavc/tests/unittest/: TEST_staticspatialindex.cpp
cmake/: SetupVcpkg.cmake
include/cavc/: staticspatialindex.hpp
interactiveui/: CMakeLists.txt  geometrycanvasitem.h  plineoffsetalgorithmview.cpp
src/: cavaliercontours.cpp
tests/benchmarks/: benchmarkprofiles.h  clipperbenchmarks.cpp  extentsbenchmarks.cpp  offsetbenchmarks.cpp
tests/polylinefactory/include/: polylinefactory.hpp
tests/tests/: CMakeLists.txt  cavc_parallel_offset_tests.cpp
tests/tests/include/: testhelpers.hpp
